<resources>
    <string name="app_name">"H"Droid</string>
    <string name="login">Login</string>
    <string name="please_type_your_email">⠀Please type your email</string>
    <string name="please_type_your_password">⠀Please type your password</string>
    <string name="forgot_password">⠀Forgot Password?</string>
    <string name="register">Register</string>
    <string name="full_name">⠀Full Name</string>
    <string name="email">⠀Email</string>
    <string name="password">⠀Password</string>
    <string name="username">⠀Username</string>
    <string name="repeat_password">⠀Repeat Password</string>
    <string name="phone_number">⠀Phone Number</string>
    <string name="date_of_birth">⠀Date of Birth</string>
    <string name="register_page_logo">Register Page Logo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="login_ico">login ico</string>
    <string name="login_background_image">login background image</string>
    <string name="logo">logo</string>
    <string name="facebook_register">facebook_register</string>
    <string name="google_register">google_register</string>
    <string name="twitter_register">twitter_register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with_account">Login with Account</string>

</resources>
