<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:contentDescription="@string/register_page_logo"
        app:srcCompat="@drawable/register_user" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="107dp"
        android:text="@string/register"
        app:cornerRadius="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="424dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="200dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_person_edit_text"
        android:drawableLeft="@drawable/ic_person_edit_text"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"

        android:layout_marginLeft="70dp"
        android:layout_marginTop="250dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_email_edit_text"
        android:drawableLeft="@drawable/ic_email_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="300dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_person_username_edit_text"
        android:drawableLeft="@drawable/ic_person_username_edit_text"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="350dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_lock_edit_text"
        android:drawableLeft="@drawable/ic_lock_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="400dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_lock_repeat_edit_text"
        android:drawableLeft="@drawable/ic_lock_repeat_edit_text"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText8"

        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="450dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_phone_edit_text"
        android:drawableLeft="@drawable/ic_phone_edit_text"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="500dp"
        android:alpha="0.5"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_date_edit_text"
        android:drawableLeft="@drawable/ic_date_edit_text"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginBottom="180dp"
        android:text="@string/male"
        tools:ignore="RelativeOverlap" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="180dp"
        android:text="@string/female"
        tools:ignore="RelativeOverlap" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="180dp"
        android:text="@string/other"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>