<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@drawable/back"
        android:contentDescription="@string/login_background_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="333dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:alpha="0.6"
                android:autofillHints="Please type your password"
                android:background="@drawable/edit_text_style"
                android:drawableStart="@drawable/ic_email_edit_text"
                android:drawableLeft="@drawable/ic_email_edit_text"
                android:hint="@string/please_type_your_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:alpha="0.6"
                android:autofillHints="Please type your email"
                android:background="@drawable/edit_text_style"
                android:drawableStart="@drawable/ic_lock_edit_text"
                android:drawableLeft="@drawable/ic_lock_edit_text"
                android:hint="@string/please_type_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:background="@drawable/logo_circle"
        android:contentDescription="@string/login_ico"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/nanananan"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:alpha="0.4"
        android:text="@string/login"
        app:cornerRadius="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="424dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="188dp"
        android:text="@string/forgot_password"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginBottom="188dp"
        android:text="@string/register"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:text="🅷"
            android:textColor="#903EBC"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🅳"
            android:textColor="#DC7878"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🆁"
            android:textColor="#E85454"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🅾"
            android:textColor="#D52B2B"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🅸"
            android:textColor="#E85454"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🅳"
            android:textColor="#DC7878"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="75dp"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            app:srcCompat="@drawable/twitter" />

    </LinearLayout>
</RelativeLayout>